--- a/sts/Spring-Jwt/src/main/resources/application.properties
+++ b/sts/Spring-Jwt/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Configuration File
-spring.datasource.url=jdbc:mysql://localhost:3306/check
+spring.datasource.url=jdbc:mysql://localhost:3306/Angular
 spring.datasource.username=springstudent
 spring.datasource.password=springstudent
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
